See if flex-end fixes layout issue on Beach card data

--- a/apps/frontend/src/components/beach-card/beach-info-section/style.module.scss
+++ b/apps/frontend/src/components/beach-card/beach-info-section/style.module.scss
@@ -53,5 +53,5 @@
 
 .readings {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
